refactor(system): 重构 AgentSystem 并优化消息处理逻辑
- 修改 AgentSystem 启动逻辑，自动启动 InputAgent
- 优化消息总线处理循环，支持异步取消
- 更新系统监控 Agent，提供更丰富的系统信息
- 调整主程序，支持长期运行并优雅停机

--- a/Agents/genesis_agent.yaml
+++ b/Agents/genesis_agent.yaml
@@ -56,7 +56,7 @@ output_connections:
   创建Agent: ["agent_creator_agent"]
 
 input_message_keyword:
-  - system_monitor_agent
+  - 来自系统监测Agent（system_monitor_agent）的系统报告
 
 metadata:
   type: Agent
