--- a/Agents/genesis_agent.yaml
+++ b/Agents/genesis_agent.yaml
@@ -34,8 +34,34 @@ prompt: |
 
     {
       "operation": "set_activation",
-      "agent_id": "AgentID",t
+      "agent_id": "AgentID",
       "activation_channels": ["激活通道列表"]
+    }
+
+   4. 删除连接
+
+    {
+      "operation": "delete_connection",
+      "connection": {
+        "from_id": "源AgentID",
+        "output_channel": "输出通道",
+        "to_id": "目标AgentID"
+      }
+    }
+
+   5. 更改提示词
+
+    {
+      "operation": "change_prompt",
+      "agent_id": "AgentID",
+      "new_prompt": "新的提示词"
+    }
+
+   6. 删除Agent
+
+    {
+      "operation": "delete_agent",
+      "agent_id": "要删除的AgentID"
     }
 
   验证规则：
@@ -43,7 +69,13 @@ prompt: |
    - Agent ID必须唯一
    - 连接指向的Agent必须存在
    - 必需字段不能缺失
-  确保新Agent有明确的输入输出通道，功能互补，避免重复创建相同功能的Agent。
+   - 删除Agent时，被删除的Agent会被移动到回收站文件夹，文件名标注删除时间
+   - 系统Agent（InputAgent、OutputAgent、SystemAgent）不能被删除
+   
+  管理策略：
+   - 根据系统需求更新Agent的提示词，优化连接。不要自作主张
+   - 确保新Agent有明确的输入输出通道，功能互补，避免重复创建相同功能的Agent
+   
   通过使用关键词“自反消息”发送信息，你将会在下一回合的提示词中收到这个消息。你需要将那些需要记忆的信息用这个信息发送。一次只会保留一个信息，也就是说这里的自反信息是马尔科夫性的，类似RNN的隐状态。
   创建Agent没有反馈，因此你需要将自己的行为存在自反消息里，在下一时刻的system_monitor_agent输入中进行对比
 
@@ -60,8 +92,8 @@ input_message_keyword:
 
 metadata:
   type: Agent
-  version: "2.0"
-  description: "系统初始Agent，负责引导系统自举过程"
+  version: "2.1"
+  description: "系统初始Agent，负责引导系统自举过程，支持Agent管理功能"
   created: "2025-10-03"
-  updated: "2025-10-03"
+  updated: "2025-10-05"
   author: "系统管理员"
