feat(agent): 增加用户输入连接并改进日志记录
- 在 genesis_agent.yaml 中添加 user_input_agent 输入连接
- 更新 SystemMonitorInputAgent 以包含代理的元数据
- 修改 UserInputAgent 将用户输入格式化为 <user_input> 标签
- 改进 UserInputAgent 中的日志记录，使用 self.logger.info 代替直接打印

--- a/Agents/genesis_agent.yaml
+++ b/Agents/genesis_agent.yaml
@@ -188,6 +188,7 @@ prompt: |
 input_connections:
   system_monitor_agent: 来自系统监测Agent（system_monitor_agent）的系统报告
   genesis_agent: 来自上一回合的你的保留状态
+  user_input_agent: 用户输入（方向指导）
 
 output_connections:
   自反消息: ["genesis_agent"]
