refactor(avm2): 重构系统主程序和 Agent 加载机制
- 使用 class_config.json 替代 eval 动态创建 Agent
- 实现安全的动态导入和类映射创建
- 优化 Agent 加载流程，增加错误处理
- 更新相关模块，适应新的加载机制

--- a/Agents/SystemAgents/user_input_agent.yaml
+++ b/Agents/SystemAgents/user_input_agent.yaml
@@ -2,7 +2,6 @@
 # 建立窗口收集用户输入
 
 id: user_input_agent
-class_name: UserInputAgent
 input_connections: {}
 
 output_connections:
@@ -12,7 +11,7 @@ input_message_keyword: []
 
 metadata:
   type: InputAgent
-  version: "1.0"
+  class_name: "UserInputAgent"
   description: "用户输入收集Agent，通过窗口界面收集用户输入"
   window_title: "AVM2 用户输入"
   window_size: [400, 200]
