feat(ETF): 集成 ETF 模块的输入输出代理
- 新增 TimingPromptAgent, UserInputAgent, FeedbackListenerAgent, DualOutputAgent 等 ETF 代理
- 实现代理之间的连接和数据流动
- 更新 main.py 以集成所有 ETF 代理
- 优化 driver/driver.py 中的 Agent 分裂逻辑

--- a/ETF/timing.yaml
+++ b/ETF/timing.yaml
@@ -1,2 +1,2 @@
-time : 60
-prompt: ""
+time: 1000
+prompt: "这个系统正在进行模拟ETF竞赛。首先，系统应该根据输入信息了解模拟的相关信息，例如各个信息流和操作选项，然后，系统可以通过输出操作信息的方式，让用户进行指定操作，包括为系统提供信息（以文本描述形式）和进行股票操作。最终目的是利益最大化。竞赛有保底机制，当亏损过多时会补充模拟资金。系统需要向用户提问市场情况，向用户询问需要的信息，给出操作指导。所有信息只能通过用户输入（user_input)来获取，没有其他方法，所有操作也由用户进行。对用户发出的指令尽量简单易操作，并且不要重复发送。系统对用户的输出会自动反馈到系统中——不要因为反馈而多次重复指令。用户输入可能很慢。"
